# cuda_fft

./: README.md
project_code/project/: CMakeLists.txt
project_code/project/Src/: CMakeLists.txt
project_code/project/Src/project_part_1/: CMakeLists.txt  project_part_1.cu
project_code/project/Src/project_part_2/: CMakeLists.txt  my_cuda_kernels.cu  pybind11_cuda_kernels.cpp
project_code/project/py_src/: data_normal.raw  run_numba.py  run_pybind.py  run_pycuda.py
project_recordings/: recording.conf
